@@ -523,8 +523,7 @@ has root => (
 =attr is_trial
 
 This attribute tells us whether or not the dist will be a trial release,
-i.e. whether it has C<release_status> 'testing' or 'unstable' and will
-have '-TRIAL' in the tarball name.
+i.e. whether it has C<release_status> 'testing' or 'unstable'.
 
 Do not set this directly, it will be derived from C<release_status>.
 
